@@ -26,19 +26,22 @@ package Torrus::SQL;
 use strict;
 use DBI;
 use DBIx::Abstract;
-
-use base 'DBIx::Abstract';
+use DBIx::Sequence;
 
 use Torrus::Log;
 
+my %connectionArgsCache;
 
 # Obtain connection attributes for particular class and object subtype.
 # The attributes are defined in torrus-siteconfig.pl, in a hash
-# %Torrus::SQL::connections. The default attributes are defined in
-# 'Default' key, then they may be overwritten by 'Class' key for a given
-# perl class, and then overwritten by 'Class/subtype' for a given object
-# subtype (optional). The key attributes are:
-# 'dsn', 'username', and 'password'.
+# %Torrus::SQL::connections.
+# For a given Perl class and an optional subtype,
+# the connection attributes are derived in the following order:
+# 'Default', 'Default/[subtype]', '[Class]', '[Class]/[subtype]',
+# 'All/[subtype]'.
+# For a simple setup, the default attributes are usually defined for
+# 'Default' key.
+# The key attributes are: 'dsn', 'username', and 'password'.
 # Returns a hash reference with the same keys.
 
 sub getConnectionArgs
@@ -47,11 +50,22 @@ sub getConnectionArgs
     my $objClass = shift;
     my $subtype = shift;
 
-    my @lookup = ('Default', $objClass);
-    if( defined( $subtype ) and length( $subtype ) > 0 )
+    my $cachekey = $objClass . ( defined( $subtype )? '/'.$subtype : '');
+    if( defined( $connectionArgsCache{$cachekey} ) )
     {
-        push( @lookup, $objClass . '/' . $subtype );
+        return $connectionArgsCache{$cachekey};
     }
+    
+    my @lookup = ('Default');
+    if( defined( $subtype ) )
+    {
+        push( @lookup, 'Default/' . $subtype );
+    }
+    push( @lookup, $objClass );
+    if( defined( $subtype ) )
+    {
+        push( @lookup, $objClass . '/' . $subtype, 'All/' . $subtype );
+    }    
 
     my $ret = {};
     foreach my $attr ( 'dsn', 'username', 'password' )
@@ -74,22 +88,13 @@ sub getConnectionArgs
         $ret->{$attr} = $val;
     }
 
+    $connectionArgsCache{$cachekey} = $ret;
+    
     return $ret;
 }
 
 
-sub new
-{
-    my $class = shift;
-    my $subtype = shift;
-
-    my $attrs = Torrus::SQL->getConnectionArgs( $class, $subtype );
-    my $self = Torrus::SQL->connect( $attrs );
-    die('Error creating SQL connection: ' . $!) unless defined( $self );
-
-    $self->{'subtype'} = $subtype;
-}
-
+my %dbhPool;
 
 # For those who want direct DBI manipulation, simply call
 # Class->dbh($subtype) with optional subtype. Then you don't use
@@ -101,20 +106,121 @@ sub dbh
     my $subtype = shift;
 
     my $attrs = Torrus::SQL->getConnectionArgs( $class, $subtype );
+
+    my $poolkey = $attrs->{'dsn'} . '//' . $attrs->{'username'} . '//' .
+        $attrs->{'password'};
+
+    my $dbh;
     
-    my $dbh = DBI->connect( $attrs->{'dsn'},
-                            $attrs->{'username'},
-                            $attrs->{'password'},
-                            { 'PrintError' => 0,
-                              'AutoCommit' => 0 } );
+    if( exists( $dbhPool{$poolkey} ) )
+    {
+        $dbh = $dbhPool{$poolkey};
+        if( not $dbh->ping() )
+        {
+            $dbh = undef;
+            delete $dbhPool{$poolkey};
+        }
+    }
 
     if( not defined( $dbh ) )
     {
-        Error('Error connecting to DBI source ' . $attrs->{'dsn'} . ': ' .
-              $DBI::errstr);
-    }
+        $dbh = DBI->connect( $attrs->{'dsn'},
+                             $attrs->{'username'},
+                             $attrs->{'password'},
+                             { 'PrintError' => 0,
+                               'AutoCommit' => 0 } );
 
+        if( not defined( $dbh ) )
+        {
+            Error('Error connecting to DBI source ' . $attrs->{'dsn'} . ': ' .
+                  $DBI::errstr);
+        }
+        else
+        {
+            $dbhPool{$poolkey} = $dbh;
+        }
+    }
+    
     return $dbh;
+}
+
+
+END
+{
+    foreach my $dbh ( values %dbhPool )
+    {
+        $dbh->disconnect();
+    }
+}
+
+
+sub new
+{
+    my $class = shift;
+    my $subtype = shift;
+
+    my $self = {};
+
+    $self->{'dbh'} = $class->dbh( $subtype );
+    if( not defined( $self->{'dbh'} ) )
+    {
+        return undef;
+    }
+    
+    $self->{'sql'} = DBIx::Abstract->connect( $self->{'dbh'} );
+
+    $self->{'subtype'} = $subtype;
+    $self->{'classname'} = $class;
+    
+    bless ($self, $class);
+    return $self;    
+}
+
+
+
+sub sequence
+{
+    my $self = shift;
+
+    if( not defined( $self->{'sequence'} ) )
+    {
+        my $attrs = Torrus::SQL->getConnectionArgs( $self->{'classname'},
+                                                    $self->{'subtype'} );
+
+        $self->{'sequence'} = DBIx::Sequence->new({
+            dbh => $self->{'dbh'},
+            allow_id_reuse => 1 });
+    }
+    return $self->{'sequence'};
+}
+       
+
+sub sequenceNext
+{
+    my $self = shift;
+
+    return $self->sequence()->Next($self->{'classname'});
+}
+
+
+sub fetchall
+{
+    my $self = shift;
+    my $columns = shift;
+    
+    my $ret = [];
+    while( defined( my $row = $self->{'sql'}->fetchrow_arrayref() ) )
+    {
+        my $retrecord = {};
+        my $i = 0;
+        foreach my $col ( @{$columns} )
+        {
+            $retrecord->{$col} = $row->[$i++];
+        }
+        push( @{$ret}, $retrecord );
+    }
+    
+    return $ret;
 }
 
 
